@@ -224,6 +224,7 @@ jFiltrado=J. Filtrado
 mCruda=M. Cruda
 mClarificada=M. Clarificada
 horaTJClaro=Hora (Turbiedad)
+horaSTJClaro=Hora (Turbiedad)
 tJClaro=Turbiedad J. Claro
 promJ1Extracto=Promedio
 
