@@ -1,5 +1,7 @@
 package ec.carper.ingenio.model
 
+import ec.carper.ingenio.actions.*
+
 import javax.persistence.*
 import org.openxava.annotations.*
 import org.openxava.calculators.*
@@ -7,16 +9,21 @@ import org.openxava.model.*
 
 @Entity
 @View(members="""
-    hora, polCachaza
+    horaS, hora;
+    polCachaza
 """)
 class TurbiedadDetalle2 extends Identifiable {
 
     @ManyToOne //Sin lazy fetching porque falla al quitar un detalle desde el padre
     Turbiedad turbiedad
 
-    @Stereotype("DATETIME") @Required
+    @Stereotype("TIME") @OnChange(TurbiedadDetalle2Action.class) @Required
+    String horaS
+
+    @Stereotype("DATETIME") @ReadOnly @Required
     java.sql.Timestamp hora
     
+    @DisplaySize(6)    
     BigDecimal polCachaza
     
 } 
