@@ -26,10 +26,10 @@ class SuiteTest extends TestCase{
        suite.addTestSuite(TrashTest.class)
        suite.addTestSuite(CanaTest.class)
        suite.addTestSuite(BagazoTest.class)
-       // suite.addTestSuite(PhTest.class)
+       suite.addTestSuite(PhTest.class)
        suite.addTestSuite(JugoTest.class)
        // suite.addTestSuite(MeladuraTest.class)
-       // suite.addTestSuite(TurbiedadTest.class)
+       suite.addTestSuite(TurbiedadTest.class)
        // suite.addTestSuite(FosfatosTest.class)
        // suite.addTestSuite(MasasTest.class)
        // suite.addTestSuite(MielesTest.class)
